# mpi_api_wrapper

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.build  Jenkinsfile  README.md
docs/: Doxyfile  Makefile
docs/source/: broadcast.rst  conf.py  index.rst  instance.rst  introduction.rst  license.rst  quickstart.rst  reduction.rst  send_receive.rst
include/: mpi.hpp
include/detail/: data_types.hpp
tests/: AllReduceTest.cpp  CMakeLists.txt  SendReceiveTest.cpp  all_reduce.cpp  broadcast.cpp  custom_data.cpp  gather.cpp  send_receive.cpp
